# dirge

./: .gitignore  CHANGELOG.md  CONFIG.md  Cargo.toml  LOOP_PLAN.md  PLAN_LEARNING.md  README.md  ROADMAP.md  build.sh
.beads/: issues.jsonl
.dirge/memory/: MEMORY.bak.1779865191  MEMORY.md  PITFALLS.bak.1779865191
.github/workflows/: ci.yml  release.yml
.lsp/.cache/: db.transit.json
docs/: H7_AGENT_LOOP_TEST.md  LSP_MANUAL_TEST.md  PLUGINS.md  README.md  THEMES.md  config.md  dap.md  features.md  lsp.md  permissions.md  prompts.md  semantic.md  skills.md  themes.md  tui.md
docs/storyboards/: 01-input-and-history.md  02-permission-ask.md  03-background-task-notification.md  04-compress-with-focus.md  05-session-resume-staleness.md  06-webfetch-ssrf-defense.md  README.md
plugins/: bookmark.janet  confirm_destructive.janet  dap_context.janet  dap_profiler.janet  dap_repl.janet  dap_watch.janet  local_openai.janet  notify_example.janet  response_inspector.janet  select_persona.janet  session_tree.janet  turn_timing.janet  workflow.janet
plugins/backpressured/: 00-state.janet  01-hooks.janet  02-commands.janet  README.md
plugins/nrepl/: 00-state.janet  01-hooks.janet  02-commands.janet  03-tools.janet  README.md
plugins/turn_timer/: 00-state.janet  01-hooks.janet  02-commands.janet
prompts/: plan.md
src/: cli.rs  event.rs  fs_atomic.rs  main.rs  provider.rs  sandbox.rs  skill.rs  text.rs  timeout.rs
src/agent/: builder.rs  compression.rs  prompt.rs  recovery.rs  recovery.rs.bak  review.rs  runner.rs
src/agent/agent_loop/: bridge.rs  bridge_tests.rs  critic.rs  h7_smoke.rs  heal.rs  integration.rs  integration_tests.rs  mod.rs  plugin_hooks_tests.rs  reflexion.rs  retry.rs  rig_stream.rs  rig_stream_factory.rs  run.rs  run_tests.rs  schema_flatten.rs  steering.rs  stream.rs  tool_input_repair.rs  tools.rs  tools_tests.rs
src/agent/agent_loop/tool_input_repair/: error_fmt.rs  hints.rs  mod.rs  semantic.rs  tests.rs  truncation.rs  validate.rs
src/agent/builder/: agent_inner.rs  loop_tools.rs  mod.rs  preamble.rs  reminder_tests.rs
src/agent/tools/: apply_patch.rs  background.rs  bash.rs  bg_shell.rs  cache.rs  debug.rs  edit.rs  find_files.rs  glob.rs  grep.rs  list_dir.rs  lsp.rs  memory.rs  mod.rs  modified.rs  plan.rs  question.rs  read.rs  repo_overview.rs  task.rs  task_status.rs  todo.rs  tool_search.rs  webfetch.rs  websearch.rs  write.rs
src/agent/tools/bash/: check.rs  exec.rs  mod.rs  tests.rs
src/agent/tools/semantic/: find_callees.rs  find_callers.rs  find_definition.rs  get_symbol_body.rs  list_symbols.rs
src/config/: mod.rs
src/context/: mod.rs  prompts.rs
src/dap/: client.rs  config.rs  defaults.json  framing.rs  janet_bindings.rs  mod.rs  session.rs  types.rs
src/extras/: memory.rs  memory_curator.rs  memory_provider.rs  memory_store.rs  session_db.rs  session_db_tests.rs  session_search.rs
src/extras/acp/: mod.rs
src/extras/loop/: transcript.rs
src/extras/mcp/: client.rs  config.rs  mod.rs  tool.rs
src/extras/skills/: guard.rs  manager.rs  usage.rs
src/lsp/: client.rs  diagnostic.rs  init.rs  jsonrpc.rs  language.rs  manager.rs  mod.rs  rpc.rs  server.rs  spawn.rs  uri.rs
src/permission/: approval.rs  checker.rs  checker_tests.rs  mod.rs  pattern.rs
src/permission/engine/: build.rs  mod.rs  policies.rs  policy.rs  types.rs
src/plugin/: extension.rs  hook.rs  mod.rs  mod_tests.rs  worker.rs
src/provider/: build.rs  dispatch.rs  mod.rs  mod_tests.rs  run.rs  spawn.rs  summarize.rs
src/semantic/: common.rs  index.rs  mod.rs  syntax_validator.rs  types.rs
src/semantic/adapters/: c.rs  clojure.rs  cpp.rs  elixir.rs  go.rs  java.rs  mod.rs  python.rs  ruby.rs  rust.rs  typescript.rs
src/session/: mod.rs  mod_tests.rs  storage.rs
src/tests/: checker_tests.rs  edit_tests.rs  input_tests.rs  learning_loop_tests.rs  semantic_tests.rs
src/tests/dap/fixtures/: test_program.py
src/ui/: agent_io.rs  avatar.rs  chat_state.rs  colors.rs  events.rs  highlight.rs  input.rs  input_reader.rs  keymap.rs  markdown.rs  mod.rs  mod_tests.rs  panel_render.rs  permission_ui.rs  picker.rs  plugin_tree.rs  renderer.rs  renderer_tests.rs  search_rewind.rs  shell_exec.rs  slash.rs  status.rs  streaming.rs  terminal.rs  text_output.rs  theme.rs  tool_display.rs  tree.rs
src/ui/run_handlers/: context_overflow.rs  done.rs  interjected.rs  mod.rs  notices.rs  streaming.rs  tool_call.rs  tool_result.rs  turn.rs
src/ui/slash/: cmd_misc.rs  cmd_model.rs  cmd_session.rs  cmd_worktree.rs  mod.rs
src/ui/tui/: bottom.rs  chat.rs  frame.rs  layout.rs  panels.rs  scene.rs
tests/: mock_dap_adapter.py
