[package]
name = "dirge"
version = "1.0.0"
edition = "2024"
authors = ["Giuseppe Della Vedova"]
description = "Minimalistic coding agent written in Rust, optimized for memory footprint and performance"
license = "GPL-3.0-only"
homepage = "https://github.com/yogthos/dirge"
repository = "https://github.com/yogthos/dirge"
readme = "README.md"
keywords = ["ai", "cli", "dev"]

[package.metadata.cargo-machete]
# rig-core is a direct dep solely to pin feature flags (reqwest,
# derive, rustls) — the actual `use rig_core::…` imports come
# through rig's re-exports. cargo-machete can't detect feature-flag
# deps, so it falsely reports rig-core as unused.
ignored = ["rig-core"]

[features]
default = ['loop', 'git-worktree', 'mcp', 'lsp']
loop = []
git-worktree = []
mcp = [
    "dep:rmcp",
    "rmcp?/client",
    "rmcp?/transport-child-process",
    "rmcp?/transport-streamable-http-client-reqwest",
]
acp = ["dep:agent-client-protocol"]
semantic = ["dep:tree-sitter", "dep:streaming-iterator"]
semantic-ts = ["semantic", "dep:tree-sitter-typescript"]
semantic-python = ["semantic", "dep:tree-sitter-python"]
semantic-bash = ["semantic", "dep:tree-sitter-bash"]
semantic-clojure = ["semantic", "dep:tree-sitter-clojure"]
semantic-go = ["semantic", "dep:tree-sitter-go"]
semantic-ruby = ["semantic", "dep:tree-sitter-ruby"]
semantic-rust = ["semantic", "dep:tree-sitter-rust"]
semantic-java = ["semantic", "dep:tree-sitter-java"]
semantic-c = ["semantic", "dep:tree-sitter-c"]
semantic-cpp = ["semantic", "dep:tree-sitter-cpp"]
semantic-elixir = ["semantic", "dep:tree-sitter-elixir"]
plugin = ["dep:janetrs"]
lsp = ["dep:lsp-types"]
experimental-ui-tab-slash = []
experimental-ui-terminal-tab = []

[target.'cfg(unix)'.dependencies]
# Used by the bash tool for process-group cleanup on timeout
# (F6) — `killpg(pgid, SIGKILL)` to terminate the whole subshell
# tree rather than orphaning bash's children.
libc = "0.2"

[dependencies]
# CVE-2026 audit (2026-05-27): rig's default features pull a
# sprawling transitive tree:
#
#   default → rustls → rig-bedrock → aws-config → aws-smithy-runtime
#     → aws-smithy-http-client → hyper-rustls 0.24.2 → rustls 0.21.12
#     → rustls-webpki 0.101.7   ← RUSTSEC-2026-0098/0099/0104
#
#   default → rustls → rig-fastembed → fastembed → hf-hub → indicatif
#     → number_prefix 0.4.0  ← RUSTSEC-2025-0119 (unmaintained)
#
#   default → rig-lancedb → lance → tantivy → lru 0.12.5
#     ← RUSTSEC-2026-0002 (unsound)
#
# Dirge only uses rig's MCP transport (`rmcp` feature) and the core
# provider/agent/completion APIs. By disabling default features we
# drop ~370 transitive crates (881→508 deps) and eliminate all 6
# cargo-audit findings. The `rustls` feature on rig-core ensures the
# reqwest TLS backend stays on the modern rustls 0.23 → webpki 0.103
# stack rather than the legacy 0.21 pathway.
rig = { version = "0.37", default-features = false, features = ["rmcp"] }
# Explicit dep to pin feature flags. Without this, rig (our only
# dep on rig-core) enables `derive` and `reqwest` via its own
# feature resolution, but we want `rustls` explicitly declared so
# future readers understand the TLS backend choice is deliberate.
# cargo-machete reports this as unused — the package.metadata
# block at the top of this file suppresses that false positive.
rig-core = { version = "0.37", default-features = false, features = ["reqwest", "derive", "rustls"] }
# Macros for emitting `Stream<Item = …>` from async generator-style
# code blocks. Used by `agent_loop::rig_stream` to wrap rig's
# `StreamingCompletionResponse` into our pi-style `StreamEvent`
# stream — the alternative is hand-rolled `impl Stream` with manual
# poll mechanics, which is verbose for multi-yield-per-input logic.
# Already in our Cargo.lock transitively; this declares the
# dependency explicitly so we can `use async_stream`.
async-stream = "0.3"
# Display-width-aware char counting for terminal layout. `chars().count()`
# undercounts emoji (e.g. ✅ takes 2 cells in most terminals); markdown
# tables misaligned the right border when cells contained them.
unicode-width = "0.2"
rmcp = { version = "1.7", optional = true, default-features = false, features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
] }
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.29"
# ui-redesign: ratatui migration. Replaces the hand-rolled stdout
# paint paths with widget + Buffer + diff rendering. Uses
# `default-features = false` + `crossterm` backend to share the
# crossterm version already in this tree.
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
# Convert the embedded SGR escapes that markdown.rs bakes into chat
# lines (\x1b[1m bold, \x1b[31m colored, etc.) into ratatui Spans at
# paint time. Without this, ratatui's Buffer would render the escape
# sequences as literal characters.
ansi-to-tui = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "process", "fs", "io-util"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
futures = "0.3"
reqwest = "0.13"
# UI-redesign branch: system CPU / MEM gauges for the [SYSTEM LOAD]
# sub-panel. `default-features = false` + only the modules we use
# keeps the dep small (no disks / networks / processes — just CPU
# + memory polling).
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
dirs = "6"
compact_str = { version = "0.9", features = ["serde"] }
smallvec = "1"
regex = "1"
ignore = "0.4"
pulldown-cmark = "0.13"
include_dir = "0.7"
http = "1"
agent-client-protocol = { version = "0.12.0", optional = true }
tree-sitter = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-bash = { version = "0.25", optional = true }
tree-sitter-clojure = { version = "0.1", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
streaming-iterator = { version = "0.1", optional = true }
jsonschema = "0.46"
janetrs = { version = "0.8", optional = true }
html2text = "0.17"
indexmap = "2"
lsp-types = { version = "0.97", optional = true }
tree-sitter-elixir = { version = "0.3.5", optional = true }
rusqlite = { version = "0.31", features = ["bundled"] }
# YAML parser for skill frontmatter (replaces hand-rolled parser in
# `src/extras/skills/format.rs`). `yaml-rust2` is the maintained fork
# of the abandoned `yaml-rust` crate, fully YAML 1.2 compliant.
yaml-rust2 = "0.11"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
# Fuzzy matcher for Ctrl-F search (dirge-bfd). Currently only used
# via `#[cfg(test)]` (search_rewind::update_search) — the Ctrl-F
# interactive feature isn't wired into the UI yet, so update_search
# is test-gated. Once Ctrl-F is wired into the event loop, the
# #[cfg(test)] gate on update_search should be removed and this
# dep moved back to [dependencies].
nucleo-matcher = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
debug = false
